-- =====================================================
-- DDLs para Base de Datos Firebird - CitiLight Admin
-- =====================================================

-- Crear Generators para auto-increment
CREATE GENERATOR GEN_CAT_ESTATUS;
CREATE GENERATOR GEN_CAT_USUARIOS;
CREATE GENERATOR GEN_CAT_PROYECTOS;
CREATE GENERATOR GEN_CAT_PERMISOS;
CREATE GENERATOR GEN_CAT_PERFILES;
CREATE GENERATOR GEN_CAT_BASES;
CREATE GENERATOR GEN_CAT_POSTES;
CREATE GENERATOR GEN_CAT_BRAZOS;
CREATE GENERATOR GEN_CAT_LUMINARIAS;
CREATE GENERATOR GEN_CAT_LAMPARAS;
CREATE GENERATOR GEN_CAT_ALMACENES;
CREATE GENERATOR GEN_CAT_CUADRILLAS;
CREATE GENERATOR GEN_CAT_ESTADOS;
CREATE GENERATOR GEN_CAT_MUNICIPIOS;
CREATE GENERATOR GEN_CAT_LOCALIDADES;
CREATE GENERATOR GEN_ALMACEN_PROYECTO;
CREATE GENERATOR GEN_CUADRILLA_PROYECTO;
CREATE GENERATOR GEN_USUARIO_PROYECTO;
CREATE GENERATOR GEN_USUARIO_PERFIL;
CREATE GENERATOR GEN_PERFIL_PERMISO;

-- =====================================================
-- Tablas de Catálogos Principales
-- =====================================================

-- Tabla CAT_ESTATUS
CREATE TABLE CAT_ESTATUS (
    ESTATUS_KEY INTEGER NOT NULL PRIMARY KEY,
    DESCRIPCION VARCHAR(100) NOT NULL,
    FECHA_CREACION TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    FECHA_MODIFICACION TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

-- Tabla CAT_USUARIOS
CREATE TABLE CAT_USUARIOS (
    USUARIOS_KEY INTEGER NOT NULL PRIMARY KEY,
    NOMBRE VARCHAR(100) NOT NULL,
    APELLIDO_PATERNO VARCHAR(100) NOT NULL,
    APELLIDO_MATERNO VARCHAR(100),
    LOGIN VARCHAR(150) NOT NULL,
    EMAIL VARCHAR(150) NOT NULL,
    PASSWORD VARCHAR(255) NOT NULL,
    TOKEN_PASSWORD VARCHAR(500),
    CLAVE_USUARIO VARCHAR(20),
    FECHA_CREACION TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    FECHA_MODIFICACION TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    ESTATUS_LINK INTEGER NOT NULL
);

-- Tabla CAT_PROYECTOS
CREATE TABLE CAT_PROYECTOS (
    PROYECTO_KEY INTEGER NOT NULL PRIMARY KEY,
    CLAVE_PROYECTO VARCHAR(20),
    NOMBRE VARCHAR(200) NOT NULL,
    DESCRIPCION BLOB SUB_TYPE TEXT,
    FECHA_INICIO DATE NOT NULL,
    FECHA_FIN DATE,
    LATITUD DOUBLE PRECISION,
    LONGITUD DOUBLE PRECISION,
    FECHA_CREACION TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    FECHA_MODIFICACION TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    ESTATUS_LINK INTEGER NOT NULL
);

-- Tabla CAT_PERMISOS
CREATE TABLE CAT_PERMISOS (
    PERMISO_KEY INTEGER NOT NULL PRIMARY KEY,
    NOMBRE VARCHAR(100) NOT NULL,
    DESCRIPCION VARCHAR(100),
    FECHA_CREACION TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    FECHA_MODIFICACION TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    ESTATUS_LINK INTEGER NOT NULL
);

-- Tabla CAT_PERFILES
CREATE TABLE CAT_PERFILES (
    PERFIL_KEY INTEGER NOT NULL PRIMARY KEY,
    NOMBRE VARCHAR(100) NOT NULL,
    CLAVE_PERFIL VARCHAR(100),
    FECHA_CREACION TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    FECHA_MODIFICACION TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    ESTATUS_LINK INTEGER NOT NULL
);

-- Tabla CAT_BASES
CREATE TABLE CAT_BASES (
    BASE_KEY INTEGER NOT NULL PRIMARY KEY,
    CODIGO_BASE VARCHAR(50) NOT NULL,
    DESCRIPCION_BASE VARCHAR(100) NOT NULL,
    MATERIAL VARCHAR(50),
    FECHA_CREACION TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    FECHA_MODIFICACION TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    ESTATUS_LINK INTEGER NOT NULL
);

-- Tabla CAT_POSTES
CREATE TABLE CAT_POSTES (
    POSTE_KEY INTEGER NOT NULL PRIMARY KEY,
    DESCRIPCION_POSTE VARCHAR(100) NOT NULL,
    CODIGO_POSTE VARCHAR(50) NOT NULL,
    MATERIAL VARCHAR(50),
    ALTURA DECIMAL(5,2),
    BASE_LINK INTEGER,
    FECHA_CREACION TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    FECHA_MODIFICACION TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    ESTATUS_LINK INTEGER NOT NULL
);

-- Tabla CAT_BRAZOS
CREATE TABLE CAT_BRAZOS (
    BRAZO_KEY INTEGER NOT NULL PRIMARY KEY,
    CODIGO_BRAZO VARCHAR(50) NOT NULL,
    DESCRIPCION_BRAZO VARCHAR(100),
    MATERIAL VARCHAR(50),
    LONGITUD DECIMAL(5,2),
    ANGULO DECIMAL(5,2),
    POSTE_LINK INTEGER,
    FECHA_CREACION TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    FECHA_MODIFICACION TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    ESTATUS_LINK INTEGER NOT NULL
);

-- Tabla CAT_LUMINARIAS
CREATE TABLE CAT_LUMINARIAS (
    ILUMINARIAS_KEY INTEGER NOT NULL PRIMARY KEY,
    CODIGO_LUMINARIA VARCHAR(50) NOT NULL,
    DESCRIPCION_LUMINARIA VARCHAR(100),
    MODELO VARCHAR(100),
    POTENCIA DECIMAL(6,2),
    FLUJO_LUMINOSO DECIMAL(8,2),
    BRAZO_LINK INTEGER NOT NULL,
    FECHA_CREACION TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    FECHA_MODIFICACION TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    ESTATUS_LINK INTEGER NOT NULL
);

-- Tabla CAT_LAMPARAS
CREATE TABLE CAT_LAMPARAS (
    LAMPARA_KEY INTEGER NOT NULL PRIMARY KEY,
    CODIGO_LAMPARA VARCHAR(50) NOT NULL,
    DESCRIPCION_LAMPARA VARCHAR(100),
    POTENCIA DECIMAL(6,2),
    VIDA_UTIL_HORAS INTEGER,
    LUMINARIA_LINK INTEGER,
    FECHA_CREACION TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    FECHA_MODIFICACION TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    ESTATUS_LINK INTEGER NOT NULL
);

-- Tabla CAT_ALMACENES
CREATE TABLE CAT_ALMACENES (
    ALMACEN_KEY INTEGER NOT NULL PRIMARY KEY,
    CLAVE_ALMACEN VARCHAR(20),
    NOMBRE VARCHAR(100) NOT NULL,
    FECHA_CREACION TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    FECHA_MODIFICACION TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    ESTATUS_LINK INTEGER NOT NULL
);

-- Tabla CAT_CUADRILLAS
CREATE TABLE CAT_CUADRILLAS (
    CUADRILLA_KEY INTEGER NOT NULL PRIMARY KEY,
    CLAVE_CUADRILLA VARCHAR(20),
    NOMBRE VARCHAR(100) NOT NULL,
    FECHA_CREACION TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    FECHA_MODIFICACION TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    ESTATUS_LINK INTEGER NOT NULL
);

-- Tabla CAT_ESTADOS
CREATE TABLE CAT_ESTADOS (
    ESTADO_KEY INTEGER NOT NULL PRIMARY KEY,
    CLAVE_ESTADO VARCHAR(20),
    NOMBRE VARCHAR(100) NOT NULL,
    NOMBRE_ABREVIADO VARCHAR(100) NOT NULL,
    FECHA_CREACION TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    FECHA_MODIFICACION TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

-- Tabla CAT_MUNICIPIOS
CREATE TABLE CAT_MUNICIPIOS (
    MUNICIPIO_KEY INTEGER NOT NULL PRIMARY KEY,
    ESTADO_LINK INTEGER NOT NULL,
    NOMBRE VARCHAR(100) NOT NULL,
    CLAVE_MUNICIPIO VARCHAR(100),
    FECHA_CREACION TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    FECHA_MODIFICACION TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

-- Tabla CAT_LOCALIDADES
CREATE TABLE CAT_LOCALIDADES (
    LOCALIDAD_KEY INTEGER NOT NULL PRIMARY KEY,
    MUNICIPIO_LINK INTEGER NOT NULL,
    CLAVE_LOCALIDAD VARCHAR(100),
    NOMBRE VARCHAR(100) NOT NULL,
    CP VARCHAR(6),
    LATITUD DOUBLE PRECISION,
    LONGITUD DOUBLE PRECISION,
    FECHA_CREACION TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    FECHA_MODIFICACION TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

-- =====================================================
-- Tablas de Relación
-- =====================================================

-- Tabla ALMACEN_PROYECTO
CREATE TABLE ALMACEN_PROYECTO (
    ALMACEN_PROYECTO_KEY INTEGER NOT NULL PRIMARY KEY,
    ALMACEN_LINK INTEGER NOT NULL,
    PROYECTO_LINK INTEGER NOT NULL,
    FECHA_CREACION TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    ESTATUS_LINK INTEGER NOT NULL
);

-- Tabla CUADRILLA_PROYECTO
CREATE TABLE CUADRILLA_PROYECTO (
    CUADRILLA_PROYECTO_KEY INTEGER NOT NULL PRIMARY KEY,
    CUADRILLA_LINK INTEGER NOT NULL,
    PROYECTO_LINK INTEGER NOT NULL,
    FECHA_CREACION TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    ESTATUS_LINK INTEGER NOT NULL
);

-- Tabla USUARIO_PROYECTO
CREATE TABLE USUARIO_PROYECTO (
    USUARIO_PROYECTO_KEY INTEGER NOT NULL PRIMARY KEY,
    USUARIO_LINK INTEGER NOT NULL,
    PROYECTO_LINK INTEGER NOT NULL,
    FECHA_CREACION TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    ESTATUS_LINK INTEGER NOT NULL
);

-- Tabla USUARIO_PERFIL
CREATE TABLE USUARIO_PERFIL (
    USUARIO_PERFIL_KEY INTEGER NOT NULL PRIMARY KEY,
    USUARIO_LINK INTEGER NOT NULL,
    PERFIL_LINK INTEGER NOT NULL,
    FECHA_CREACION TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    ESTATUS_LINK INTEGER NOT NULL
);

-- Tabla PERFIL_PERMISO
CREATE TABLE PERFIL_PERMISO (
    PERFIL_PERMISO_KEY INTEGER NOT NULL PRIMARY KEY,
    PERFIL_LINK INTEGER NOT NULL,
    PERMISO_LINK INTEGER NOT NULL,
    FECHA_CREACION TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    ESTATUS_LINK INTEGER NOT NULL
);

-- =====================================================
-- Constraints de Unicidad
-- =====================================================

-- Constraints únicos
CREATE UNIQUE INDEX IDX_CAT_USUARIOS_LOGIN ON CAT_USUARIOS (LOGIN);
CREATE UNIQUE INDEX IDX_CAT_USUARIOS_EMAIL ON CAT_USUARIOS (EMAIL);
CREATE UNIQUE INDEX IDX_CAT_BASES_CODIGO ON CAT_BASES (CODIGO_BASE);
CREATE UNIQUE INDEX IDX_CAT_POSTES_CODIGO ON CAT_POSTES (CODIGO_POSTE);
CREATE UNIQUE INDEX IDX_CAT_BRAZOS_CODIGO ON CAT_BRAZOS (CODIGO_BRAZO);
CREATE UNIQUE INDEX IDX_CAT_LUMINARIAS_CODIGO ON CAT_LUMINARIAS (CODIGO_LUMINARIA);
CREATE UNIQUE INDEX IDX_CAT_LAMPARAS_CODIGO ON CAT_LAMPARAS (CODIGO_LAMPARA);

-- =====================================================
-- Foreign Keys
-- =====================================================

-- Relaciones de ubicación geográfica
ALTER TABLE CAT_MUNICIPIOS ADD CONSTRAINT FK_MUNICIPIOS_ESTADO 
    FOREIGN KEY (ESTADO_LINK) REFERENCES CAT_ESTADOS (ESTADO_KEY);

ALTER TABLE CAT_LOCALIDADES ADD CONSTRAINT FK_LOCALIDADES_MUNICIPIO 
    FOREIGN KEY (MUNICIPIO_LINK) REFERENCES CAT_MUNICIPIOS (MUNICIPIO_KEY);

-- Relaciones de infraestructura de iluminación
ALTER TABLE CAT_POSTES ADD CONSTRAINT FK_POSTES_BASE 
    FOREIGN KEY (BASE_LINK) REFERENCES CAT_BASES (BASE_KEY);

ALTER TABLE CAT_BRAZOS ADD CONSTRAINT FK_BRAZOS_POSTE 
    FOREIGN KEY (POSTE_LINK) REFERENCES CAT_POSTES (POSTE_KEY);

ALTER TABLE CAT_LUMINARIAS ADD CONSTRAINT FK_LUMINARIAS_BRAZO 
    FOREIGN KEY (BRAZON_LINK) REFERENCES CAT_BRAZOS (BRAZO_KEY);

ALTER TABLE CAT_LAMPARAS ADD CONSTRAINT FK_LAMPARAS_LUMINARIA 
    FOREIGN KEY (LUMINARIA_LINK) REFERENCES CAT_LUMINARIAS (ILUMINARIAS_KEY);

-- Relaciones de proyectos y usuarios
ALTER TABLE ALMACEN_PROYECTO ADD CONSTRAINT FK_ALMACEN_PROYECTO_ALMACEN 
    FOREIGN KEY (ALMACEN_LINK) REFERENCES CAT_ALMACENES (ALMACEN_KEY);

ALTER TABLE ALMACEN_PROYECTO ADD CONSTRAINT FK_ALMACEN_PROYECTO_PROYECTO 
    FOREIGN KEY (PROYECTO_LINK) REFERENCES CAT_PROYECTOS (PROYECTO_KEY);

ALTER TABLE CUADRILLA_PROYECTO ADD CONSTRAINT FK_CUADRILLA_PROYECTO_CUADRILLA 
    FOREIGN KEY (CUADRILLA_LINK) REFERENCES CAT_CUADRILLAS (CUADRILLA_KEY);

ALTER TABLE CUADRILLA_PROYECTO ADD CONSTRAINT FK_CUADRILLA_PROYECTO_PROYECTO 
    FOREIGN KEY (PROYECTO_LINK) REFERENCES CAT_PROYECTOS (PROYECTO_KEY);

ALTER TABLE USUARIO_PROYECTO ADD CONSTRAINT FK_USUARIO_PROYECTO_USUARIO 
    FOREIGN KEY (USUARIO_LINK) REFERENCES CAT_USUARIOS (USUARIOS_KEY);

ALTER TABLE USUARIO_PROYECTO ADD CONSTRAINT FK_USUARIO_PROYECTO_PROYECTO 
    FOREIGN KEY (PROYECTO_LINK) REFERENCES CAT_PROYECTOS (PROYECTO_KEY);

ALTER TABLE USUARIO_PERFIL ADD CONSTRAINT FK_USUARIO_PERFIL_USUARIO 
    FOREIGN KEY (USUARIO_LINK) REFERENCES CAT_USUARIOS (USUARIOS_KEY);

ALTER TABLE USUARIO_PERFIL ADD CONSTRAINT FK_USUARIO_PERFIL_PERFIL 
    FOREIGN KEY (PERFIL_LINK) REFERENCES CAT_PERFILES (PERFIL_KEY);

ALTER TABLE PERFIL_PERMISO ADD CONSTRAINT FK_PERFIL_PERMISO_PERFIL 
    FOREIGN KEY (PERFIL_LINK) REFERENCES CAT_PERFILES (PERFIL_KEY);

ALTER TABLE PERFIL_PERMISO ADD CONSTRAINT FK_PERFIL_PERMISO_PERMISO 
    FOREIGN KEY (PERMISO_LINK) REFERENCES CAT_PERMISOS (PERMISO_KEY);

-- Relaciones con estatus
ALTER TABLE CAT_USUARIOS ADD CONSTRAINT FK_USUARIOS_ESTATUS 
    FOREIGN KEY (ESTATUS_LINK) REFERENCES CAT_ESTATUS (ESTATUS_KEY);

ALTER TABLE CAT_PROYECTOS ADD CONSTRAINT FK_PROYECTOS_ESTATUS 
    FOREIGN KEY (ESTATUS_LINK) REFERENCES CAT_ESTATUS (ESTATUS_KEY);

ALTER TABLE CAT_PERMISOS ADD CONSTRAINT FK_PERMISOS_ESTATUS 
    FOREIGN KEY (ESTATUS_LINK) REFERENCES CAT_ESTATUS (ESTATUS_KEY);

ALTER TABLE CAT_PERFILES ADD CONSTRAINT FK_PERFILES_ESTATUS 
    FOREIGN KEY (ESTATUS_LINK) REFERENCES CAT_ESTATUS (ESTATUS_KEY);

ALTER TABLE CAT_BASES ADD CONSTRAINT FK_BASES_ESTATUS 
    FOREIGN KEY (ESTATUS_LINK) REFERENCES CAT_ESTATUS (ESTATUS_KEY);

ALTER TABLE CAT_POSTES ADD CONSTRAINT FK_POSTES_ESTATUS 
    FOREIGN KEY (ESTATUS_LINK) REFERENCES CAT_ESTATUS (ESTATUS_KEY);

ALTER TABLE CAT_BRAZOS ADD CONSTRAINT FK_BRAZOS_ESTATUS 
    FOREIGN KEY (ESTATUS_LINK) REFERENCES CAT_ESTATUS (ESTATUS_KEY);

ALTER TABLE CAT_LUMINARIAS ADD CONSTRAINT FK_LUMINARIAS_ESTATUS 
    FOREIGN KEY (ESTATUS_LINK) REFERENCES CAT_ESTATUS (ESTATUS_KEY);

ALTER TABLE CAT_LAMPARAS ADD CONSTRAINT FK_LAMPARAS_ESTATUS 
    FOREIGN KEY (ESTATUS_LINK) REFERENCES CAT_ESTATUS (ESTATUS_KEY);

ALTER TABLE CAT_ALMACENES ADD CONSTRAINT FK_ALMACENES_ESTATUS 
    FOREIGN KEY (ESTATUS_LINK) REFERENCES CAT_ESTATUS (ESTATUS_KEY);

ALTER TABLE CAT_CUADRILLAS ADD CONSTRAINT FK_CUADRILLAS_ESTATUS 
    FOREIGN KEY (ESTATUS_LINK) REFERENCES CAT_ESTATUS (ESTATUS_KEY);

ALTER TABLE ALMACEN_PROYECTO ADD CONSTRAINT FK_ALMACEN_PROYECTO_ESTATUS 
    FOREIGN KEY (ESTATUS_LINK) REFERENCES CAT_ESTATUS (ESTATUS_KEY);

ALTER TABLE CUADRILLA_PROYECTO ADD CONSTRAINT FK_CUADRILLA_PROYECTO_ESTATUS 
    FOREIGN KEY (ESTATUS_LINK) REFERENCES CAT_ESTATUS (ESTATUS_KEY);

ALTER TABLE USUARIO_PROYECTO ADD CONSTRAINT FK_USUARIO_PROYECTO_ESTATUS 
    FOREIGN KEY (ESTATUS_LINK) REFERENCES CAT_ESTATUS (ESTATUS_KEY);

ALTER TABLE USUARIO_PERFIL ADD CONSTRAINT FK_USUARIO_PERFIL_ESTATUS 
    FOREIGN KEY (ESTATUS_LINK) REFERENCES CAT_ESTATUS (ESTATUS_KEY);

ALTER TABLE PERFIL_PERMISO ADD CONSTRAINT FK_PERFIL_PERMISO_ESTATUS 
    FOREIGN KEY (ESTATUS_LINK) REFERENCES CAT_ESTATUS (ESTATUS_KEY);
